--- a/Week3/lecture3/tasks/templates/tasks/add.html
+++ b/Week3/lecture3/tasks/templates/tasks/add.html
@@ -1,2 +1,15 @@
-{% extends "tasks/layout.html" %}
- 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Tasks</title>
+    </head>
+    <body>
+        <h1>Add Task</h1>
+        <form action="{% url 'tasks:add' %}" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit">
+        </form>
+        <a href="{% url 'tasks:index' %}">View Tasks</a>
+    </body>
+</html>
