--- a/Week3/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/Week3/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block body %}
-    <div>{{ entry|safe }}</div>
+    <div>{{ entry|safe }}</div><br>
+    <a href="{% url 'edit' %}?title={{ title }}" class="btn btn-secondary">Edit this page</a>
 {% endblock %}
