--- a/Week3/wiki/encyclopedia/templates/encyclopedia/error.html
+++ b/Week3/wiki/encyclopedia/templates/encyclopedia/error.html
@@ -1,13 +1,10 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Error 404
+    Error
 {% endblock %}
 
 {% block body %}
-    <h1>Error 404: Page not found</h1>
-
-
-    You tried to search {{ entry }}. 
-
+    <h1>Error:</h1>
+    <p>{{ message }}</p>
 {% endblock %}
